--- a/0/theme/css/00-header.css
+++ b/0/theme/css/00-header.css
@@ -1,6 +1,6 @@
 
 /*
-Theme Name: EC01 Commons Style
+Theme Name: EC01 Style
 Theme URI: http://ec01.earth3300.info/
 Author: Clarence Bos
 Author URI: http://ec01.earth3300.info/
@@ -13,6 +13,6 @@ Tags: lightweight, simple
 
 File: 00-header.css
 Created: 2018-11-02
-Updated: 2018-11-03
-Time: 10:50 EST
+Updated: 2018-11-04
+Time: 14:48 EST
 */
