--- a/0/theme/css/01-bootstrap.css
+++ b/0/theme/css/01-bootstrap.css
@@ -23,8 +23,8 @@
  *
  * File: 01-bootstrap.css
  * Created: 2016.12.15
- * Updated: 2018-11-03
- * Time: 09:21 EST
+ * Updated: 2018-11-04
+ * Time: 14:48 EST
  */
 
 /**
@@ -62,6 +62,18 @@
 	footer {
 		font-size: 90%;
 		opacity: .85;
+	}
+
+	.float-left {
+	  float: left;
+	}
+
+	.float-right {
+	  float: right;
+	}
+
+	.float-none {
+	  float: none;
 	}
 
 	.hide {
@@ -106,7 +118,7 @@
 
 	/** Triggered when the element has focus, such as after tabbing to it. */
 	a:focus {
-		color: hsl(4, 75%, 40%);
+		color: hsl(16, 75%, 50%);
 		outline: none;
 	}
 
@@ -207,6 +219,19 @@
 	.btn-secondary:not(:disabled):not(.disabled).active:focus,
 	.show > .btn-secondary.dropdown-toggle:focus {
 	  box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
+	}
+
+	/* Highlight the target, if it has a border. */
+	:target.border {
+		box-shadow: 0 0 0 0.12rem hsla(75, 75%, 25%, 0.5);
+	}
+
+	/* Keep the target below the top of the page. */
+	:target::before {
+		content: "";
+		display: block;
+		height: 100px; /* fixed header height*/
+		margin-top: -100px; /* negative fixed header height */
 	}
 
 }
