--- a/0/theme/css/06-adjustments.css
+++ b/0/theme/css/06-adjustments.css
@@ -10,8 +10,8 @@
  *
  * File: 06-adjustments.css
  * Created: 2018
- * Updated: 2018-11-03
- * Time: 09:23 EST
+ * Updated: 2018-11-04
+ * Time: 14:48 EST
  */
 
 /**
@@ -25,44 +25,81 @@
 
 	/*** COLOR START ***/
 
-	body { border: 1px solid #999; }
+	body {
+		border: 1px solid #999;
+	}
 
-	.title-wrap { background-color: #93c47d; }
+	.site-header {
+		position: relative;
+		border-bottom: 1px solid #999;
+	}
 
-	.site-title, .site-description { color: #efefef; }
+	.site-header:hover {
+		border-color: hsl(20, 30%, 50%);
+		background-color: hsl(24, 50%, 75%);
+	}
+
+	.site-header > a > .inner {
+		margin: 2px;
+		border-top-left-radius: 3px;
+		border-top-right-radius: 3px;
+		background-color: hsl(84, 25%, 50%);
+	}
+
+	.site-logo {
+		position: absolute;
+		top: 1px;
+		left: 3px;
+	}
+
+	.site-title,
+	.site-description {
+		color: hsl(15, 66%, 33%);
+	}
 
 	.site-title {
-		text-shadow: 2px -1px 2px #134f5c;
+		text-shadow: 2px -1px 2px hsl(204, 25%, 25%);
 		display: none;
 		}
 
 	.site-description {
-		text-shadow: 1px 1px 1px #134f5c;
-		/* faded sky blue */
+		text-shadow: 1px 1px 1px hsl(204, 25%, 25%);
 		line-height: 1.3em;
-		font-size: 1.2em;
+		font-size: 1.1em;
 	}
 
-	.site-header { border-bottom: 1px solid #999; }
+	.site-header-sub {
+		border-bottom: 1px solid #999;
+	}
 
-	.site-header-sub { border-bottom: 1px solid #999; }
+	.spacer-header {
+		border-bottom: #777 solid 4px;
+	}
 
-	.spacer-header { border-bottom: #777 solid 4px; }
-
-	.spacer-header-bottom { box-shadow: 0 1px 2px rgba(50, 50, 50, 1.0); }
+	.spacer-header-bottom {
+		box-shadow: 0 1px 2px rgba(50, 50, 50, 1.0);
+	}
 
 	.spacer-footer-top {
 		border-top: #777 solid 4px;
 		box-shadow: 1px 1px 2px rgba(50, 50, 50, 1.0);
 	}
 
-	.active { background: #e0e0e0; }
+	.active {
+		background: #e0e0e0;
+	}
 
-	.inactive {	background: #eee; }
+	.inactive {
+		background: #eee;
+	}
 
-	.core .border { background: #a2c4c9; }
+	.core .border {
+		background: #a2c4c9;
+	}
 
-	.alt .border { background: #ffd966; }
+	.alt .border {
+		background: #ffd966;
+	}
 
 	article .unit .border {
 		border-width: 6px;
@@ -73,9 +110,13 @@
 		box-shadow: 1px 1px 3px rgba(50, 50, 50, 1.0);
 	}
 
-	.boxes .unit .inner { box-shadow: inset 1px 1px 3px rgba(50, 50, 50, 1.0); }
+	.boxes .unit .inner {
+		box-shadow: inset 1px 1px 3px rgba(50, 50, 50, 1.0);
+	}
 
-	.boxes > .line > .unit > .inner { border: 1px solid #c8c8c8; }
+	.boxes > .line > .unit > .inner {
+		border: 1px solid #c8c8c8;
+	}
 
 	/*** COLOR END ***/
 
@@ -105,24 +146,39 @@
 		overflow: hidden;
 	}
 
-	.boxes a { border-bottom: none; }
+	.boxes a {
+		border-bottom: none;
+	}
 
-	.boxes h2, .boxes h3 { text-align: center; }
+	.boxes h2,
+	.boxes h3 {
+		text-align: center;
+	}
 
-	.boxes h2 { font-size: 100%; }
+	.boxes h2 {
+		font-size: 100%;
+	}
 
-	.boxes h3 { font-size: 80%; }
+	.boxes h3 {
+		font-size: 80%;
+	}
 
-	.boxes h4 { font-size: 75%; }
+	.boxes h4 {
+		font-size: 75%;
+	}
 
-	.boxes > .line > .unit:last-child { margin-bottom: 0; }
+	.boxes > .line > .unit:last-child {
+		margin-bottom: 0;
+	}
 
 	.boxes > .line > .unit > .inner {
 		margin: 5px;
 		overflow: hidden;
 	}
 
-	.boxes .unit .inner { padding: 5px; }
+	.boxes .unit .inner {
+		padding: 5px;
+	}
 
 	.boxes h2 {
 		clear: both;
@@ -132,17 +188,29 @@
 		opacity: .8;
 	}
 
-	.boxes .unit h2 { margin: 0; }
+	.boxes .unit h2 {
+		margin: 0;
+	}
 
-	.boxes.vertical a { display: block; }
+	.boxes.vertical a {
+		display: block;
+	}
 
 	/*** BOXES END ***/
 
 	/*** BORDER RADIUS START ***/
 
-	.boxes .unit .border { border-radius: 7px; }
-	.boxes .unit .inner { border-radius: 3px; }
-	.boxes > .line > .unit > .inner { border-radius: 4px; }
+	.boxes .unit .border {
+		border-radius: 7px;
+	}
+
+	.boxes .unit .inner {
+		border-radius: 3px;
+	}
+
+	.boxes > .line > .unit > .inner {
+		border-radius: 4px;
+	}
 
 	/*** BORDER RADIUS END ***/
 
@@ -157,24 +225,34 @@
 	}
 	*/
 
-	h1 { text-align: center; }
+	h1 {
+		text-align: center;
+	}
 
-	.community .unit a { font-weight: bold; }
+	.community .unit a {
+		font-weight: bold;
+	}
 
 	iframe {
 		display: block;
 		margin: 0 auto;
 	}
 
-	p.date { font-size: 80%; }
+	p.date {
+		font-size: 80%;
+	}
 
 	/*** OTHER END ***/
 
 	/*** MISC START ***/
 
-	.what h3 { display: none; }
+	.what h3 {
+		display: none;
+	}
 
-	.spacer { margin-bottom: 20px; }
+	.spacer {
+		margin-bottom: 20px;
+	}
 
 	/* Survey Monkey Embedded Survey Form */
 	.smcx-embed {
@@ -198,6 +276,7 @@
 	.tier-2 .site-logo .inner {
 		height: 25px;
 	}
+
 	.tier-2 .site-logo img {
 		width: 25px;
 		height: 25px;
@@ -213,7 +292,9 @@
 		display: inline-block;
 	}
 
-	.tier-2 .site-header { height: 20px; }
+	.tier-2 .site-header {
+		height: 20px;
+	}
 
 	.tier-2 .title-wrap {
 		height: 20px;
@@ -221,7 +302,9 @@
 		background-position: 5px;
 	}
 
-	.tier-2 .title-wrap .inner { display: none; }
+	.tier-2 .title-wrap .inner {
+		display: none;
+	}
 
 	.tier-2 .site-header-sub {
 		margin-top: 0;
