--- a/0/theme/css/style.all.css
+++ b/0/theme/css/style.all.css
@@ -35,6 +35,15 @@ Time: 14:48 EST
  * of this writing. All modern browsers support this color model
  * {@see https://caniuse.com/#search=hsl} and there are no known issues with it.
  *
+ * These files may use some styling from Bootstrap, gratefully acknowledged:
+  *
+ * Bootstrap v4.1.3 (https://getbootstrap.com/)
+ * Copyright 2011-2018 The Bootstrap Authors
+ * Copyright 2011-2018 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
+*/
+
+ *
  * File URI: https://github.com/earth3300/ec01-css
  * Author URI: https://github.com/earth3300
  * License: GPL v3.0
@@ -62,6 +71,7 @@ Time: 14:48 EST
 		font: 1em/1.6 sans-serif;
 		background-color: hsl(0, 0%, 100%);
 		color: hsl(0, 0%, 20%);
+		min-width: 480px;
 		max-width: 750px;
 		display: block;
 		margin: 0 auto;
@@ -252,6 +262,47 @@ Time: 14:48 EST
 		margin-top: -100px; /* negative fixed header height */
 	}
 
+	/* Hide when less than 480px */
+	@media (max-width: 480px) {
+		.hide-phone {
+			display: none !important;
+		}
+	}
+
+	/* Hide when less than 991px */
+	@media (max-width: 991px) {
+		.hide-tablet {
+			display: none !important;
+		}
+	}
+
+  /* Hide when less than 991px */
+	@media (max-width: 991px) {
+		.show-desktop {
+			display: none !important;
+		}
+	}
+
+  /* Show when greater than 992px */
+	@media (min-width: 992px) {
+		.show-desktop {
+			display: block;
+		}
+	}
+
+	/* Hide when less than 1799px */
+	@media (max-width: 1799px) {
+		.show-hd {
+			display: none !important;
+		}
+	}
+
+  /* Show when greater than 1800px */
+	@media (min-width: 1800px) {
+			.show-hd {
+				display: block;
+			}
+		}
 }
 /* Media Screen End */
 
@@ -326,7 +377,15 @@ Time: 14:48 EST
 
 	/********** GENERIC STYLING BEGIN **********/
 
-	html { padding: 1em; }
+	html {
+			padding: .12em;
+	}
+
+	@media ( min-width: 849px) {
+		html {
+			padding: 1em;
+		}
+	}
 
 	/*** COLOR START ***/
 
@@ -641,10 +700,15 @@ Time: 14:48 EST
 		font-size: 100%;
 	}
 
+  /**
+	 * Display as a block, keep the max-width to a reasonable size, keep padding
+	 * the same all around, center in the containing div. 
+	 */
 	article {
 		display: block;
 		margin: 0 auto;
-		padding: 1em 2em;
+		padding: 1em;
+		max-width: 780px;
 		position: relative;
 		overflow: hidden;
 	}
@@ -1167,7 +1231,13 @@ Time: 14:48 EST
 		width: 85px;
 		height: 85px;
 	}
+
+	.img-medium {
+		width: 150px;
+		height: 150px;
+	}
 }
+
 /* Main All End */
 
 /* Main End */
