--- a/0/theme/css/style.all.css
+++ b/0/theme/css/style.all.css
@@ -2354,6 +2354,18 @@ Time: 14:48 EST
 
 	.site-header-sub {
 		border-bottom: 1px solid #999;
+		box-sizing: border-box;
+	}
+
+	.site-header-sub .none {
+		padding-left: 2px;
+	}
+
+	.site-header-sub .color.lighter,
+	.site-header-sub .color.darker
+	 {
+			margin-right: 2px;
+			margin-left: 2px;
 	}
 
 	.spacer-header {
@@ -2576,7 +2588,7 @@ Time: 14:48 EST
 		display: inline-block;
 	}
 
-	.tier-2 .site-header {
+	.tier-2 .site-header > a {
 		height: 20px;
 	}
 
