--- a/0/theme/css/style.all.css
+++ b/0/theme/css/style.all.css
@@ -93,7 +93,7 @@ Time: 14:48 EST
 	}
 
 	.float-left {
-	  float: left;
+	  float: left !important;
 	}
 
 	.float-right {
@@ -702,7 +702,7 @@ Time: 14:48 EST
 
   /**
 	 * Display as a block, keep the max-width to a reasonable size, keep padding
-	 * the same all around, center in the containing div. 
+	 * the same all around, center in the containing div.
 	 */
 	article {
 		display: block;
@@ -1147,10 +1147,12 @@ Time: 14:48 EST
 	}
 
 	img.float-left {
+		float: left;
 		margin-right: 1em;
 	}
 
 	img.float-right {
+		float: right;
 		margin-left: 1em;
 	}
 
@@ -2560,25 +2562,25 @@ Time: 14:48 EST
 
 	/*** TIER 2 (CLUSTER) START ***/
 
-	.tier-2 .site-header {
+	.tier-1 .site-header {
 		position: relative;
 	}
 
-	.tier-2 .site-logo {
+	.tier-1 .site-logo {
 		position: absolute;
 		z-index: 10;
 	}
 
-	.tier-2 .site-logo .inner {
+	.tier-1 .site-logo .inner {
 		height: 25px;
 	}
 
-	.tier-2 .site-logo img {
+	.tier-1 .site-logo img {
 		width: 25px;
 		height: 25px;
 	}
 
-	.tier-2 .level-1.icon {
+	.tier-1 .level-1.icon {
 		position: absolute;
 		z-index: 10;
 		right: 40px;
@@ -2588,21 +2590,21 @@ Time: 14:48 EST
 		display: inline-block;
 	}
 
-	.tier-2 .site-header > a {
+	.tier-1 .site-header > a {
 		height: 20px;
 	}
 
-	.tier-2 .title-wrap {
+	.tier-1 .title-wrap {
 		height: 20px;
 		background-size: 18px;
 		background-position: 5px;
 	}
 
-	.tier-2 .title-wrap .inner {
+	.tier-1 .title-wrap .inner {
 		display: none;
 	}
 
-	.tier-2 .site-header-sub {
+	.tier-1 .site-header-sub {
 		margin-top: 0;
 		height: 77px;
 		text-align: left;
@@ -2611,7 +2613,7 @@ Time: 14:48 EST
 		position: relative;
 	}
 
-	.tier-2 .site-header-sub .level-01 {
+	.tier-1 .site-header-sub .level-01 {
 		display: inline-block;
 		height: 73px;
 		padding: 0 1.0em;
@@ -2621,7 +2623,7 @@ Time: 14:48 EST
 		font-size: 120%;
 	}
 
-	.tier-2 .site-header-sub .level-02 {
+	.tier-1 .site-header-sub .level-02 {
 		font-weight: bold;
 		font-size: 110%;
 		width: 75%;
@@ -2629,7 +2631,7 @@ Time: 14:48 EST
 		top: 0;
 	}
 
-	.tier-2 .site-header-sub .level-02 span {
+	.tier-1 .site-header-sub .level-02 span {
 		display: inline-block;
 	}
 
