--- a/0/theme/css/06-adjustments.css
+++ b/0/theme/css/06-adjustments.css
@@ -327,7 +327,8 @@
 		position: relative;
 	}
 
-	.tier-1 .site-header-sub .level-01 {
+	/** This goes on the left hand side, but fills the whole width (behind) */
+	.tier-1 .site-header-sub .left {
 		display: inline-block;
 		height: 73px;
 		padding: 0 1.0em;
@@ -337,7 +338,8 @@
 		font-size: 120%;
 	}
 
-	.tier-1 .site-header-sub .level-02 {
+	/** This goes on the right hand side and fills only about 75% of the width. */
+	.tier-1 .site-header-sub .right {
 		font-weight: bold;
 		font-size: 110%;
 		width: 75%;
@@ -345,11 +347,11 @@
 		top: 0;
 	}
 
-	.tier-1 .site-header-sub .level-02 span {
+	.tier-1 .site-header-sub .right span {
 		display: inline-block;
 	}
 
-	.site-header-sub .level-02 .header-height {
+	.site-header-sub .right .header-height {
 		height: 74px;
 	}
 
