--- a/0/theme/css/03-color.css
+++ b/0/theme/css/03-color.css
@@ -19,33 +19,33 @@
  */
 @media all {
 
-	.color-updated { background: #181007; }
+	.color-updated { background-color: #181007; }
 
-	.commons .color.lighter { background: #b6d7a8; } /* green */
+	.commons .color.lighter { background-color: #b6d7a8; } /* green */
 
-	.nature .color.lighter { background: #b6d7a8; }
-	.building .color.lighter { background: #d9d9d9; } /* light grey */
-	.information .color.lighter { background: #ffe599; } /* light yellow */
-	.project .color.lighter { background: #ffd966; } /* light orange */
-	.safety .color.lighter { background: #d9d9d9; } /* light grey */
-	.recovery .color.lighter { background: #93c47d; } /* medium green */
-	.profession .color.lighter { background: #d0e0e3; } /* light blue */
-	.news .color.lighter { background: #f1c232; } /* medium orange */
-	.process .color.lighter { background: #e6b8af; } /* light magenta */
-	.method .color.lighter { background: #e6b8af; } /* light magenta */
-	.standard .color.lighter { background: #f4cccc; } /* light violet */
-	.design .color.lighter { background: #ffd966;} /* light yellow */
-	.equipment .color.lighter { background: #fce5cd; } /* light orange */
-	.resource .color.lighter { background: #d9ead3; } /* light green */
-	.service .color.lighter { background: #a2c4c9; } /* medium blue */
-	.supply .color.lighter { background: #f9cb9c; } /* light orange */
-	.store .color.lighter { background: hsl(300, 50%, 75%); } /* medium violet */
+	.nature .color.lighter { background-color: #b6d7a8; }
+	.building .color.lighter { background-color: #d9d9d9; } /* light grey */
+	.information .color.lighter { background-color: #ffe599; } /* light yellow */
+	.project .color.lighter { background-color: #ffd966; } /* light orange */
+	.safety .color.lighter { background-color: #d9d9d9; } /* light grey */
+	.recovery .color.lighter { background-color: #93c47d; } /* medium green */
+	.profession .color.lighter { background-color: #d0e0e3; } /* light blue */
+	.news .color.lighter { background-color: #f1c232; } /* medium orange */
+	.process .color.lighter { background-color: #e6b8af; } /* light magenta */
+	.method .color.lighter { background-color: #e6b8af; } /* light magenta */
+	.standard .color.lighter { background-color: #f4cccc; } /* light violet */
+	.design .color.lighter { background-color: #ffd966;} /* light yellow */
+	.equipment .color.lighter { background-color: #fce5cd; } /* light orange */
+	.resource .color.lighter { background-color: #d9ead3; } /* light green */
+	.service .color.lighter { background-color: #a2c4c9; } /* medium blue */
+	.supply .color.lighter { background-color: #f9cb9c; } /* light orange */
+	.store .color.lighter { background-color: hsl(300, 50%, 75%); } /* medium violet */
 
-	.download .color.lighter { background: #279f43; }
+	.download .color.lighter { background-color: #279f43; }
 
 	/* headers have a stronger color, same shade */
 
-	.color.darker { background: #999; } /* darker grey */
+	.color.darker { background-color: #999; } /* darker grey */
 
 	.trade .color.darker { background-color: #ffa332; } /* orange */
 	.applied .color.darker { background-color: #45818e; } /* cyan */
@@ -75,15 +75,19 @@
 	.equipment .color.darker { background-color: #fce5cd; }
 	.resource .color.darker { background-color: #d9ead3; }
 	.service .color.darker { background-color: #a2c4c9; }
+	.ethics .color.darker { background-color: hsl(25, 85%, 85%); }
+	.religion .color.darker { background-color: hsl(50, 85%, 85%); }
+	.sustainability .color.darker { background-color: hsl(100, 85%, 85%); }
+	.motivation .color.darker { background-color: hsl(210, 35%, 50%); }
 
 	.download .color.darker { background-color: #279f43; }
 
 	/* SUB LEVEL COLORS */
 
-	.color.lighter { background: #d9d9d9; } /* light grey */
+	.color.lighter { background-color: #d9d9d9; } /* light grey */
 
 	/* TRADE */
-	.trade .color.lighter { background: #ffd199; } /* orange */
+	.trade .color.lighter { background-color: #ffd199; } /* orange */
 	.carpentry .color.lighter { background-color: #ea9999; }
 	.electrical .color.lighter { background-color: #f9cb9c; }
 	.plumbing .color.lighter { background-color: #ffe599; }
@@ -92,7 +96,7 @@
 	.masonry .color.lighter { background-color: #b4a7d6; }
 
 	/* CAFE */
-	.cafe .color.lighter { background: #e6b8af; } /* red berry */
+	.cafe .color.lighter { background-color: #e6b8af; } /* red berry */
 	.storage .color.lighter { background-color: #ea9999; }
 	.baking .color.lighter { background-color: #f9cb9c; }
 	.cooking .color.lighter { background-color: #ffe599; }
@@ -101,7 +105,7 @@
 	.recycling .color.lighter { background-color: #b4a7d6; }
 
 	/* APPLIED */
-	.applied .color.lighter { background: #a2c4c9; } /* cyan */
+	.applied .color.lighter { background-color: #a2c4c9; } /* cyan */
 	.engineering .color.lighter { background-color: #ea9999; }
 	.architecture .color.lighter { background-color: #f9cb9c; }
 	.landscaping .color.lighter { background-color: #ffe599; }
@@ -110,7 +114,7 @@
 	.robotics .color.lighter { background-color: #b4a7d6; }
 
 	/* ART */
-	.art .color.lighter { background: #d5a6bd; } /* magenta */
+	.art .color.lighter { background-color: #d5a6bd; } /* magenta */
 	.piano .color.lighter { background-color: #ea9999; }
 	.violin .color.lighter { background-color: #f9cb9c; }
 	.painting .color.lighter { background-color: #ffe599; }
@@ -119,7 +123,7 @@
 	.saxophone .color.lighter { background-color: #b4a7d6; }
 
 	/* ACADEMIC */
-	.academic .color.lighter { background: #d9d2e9; } /* purple */
+	.academic .color.lighter { background-color: #d9d2e9; } /* purple */
 	.mathematics .color.lighter { background-color: #ea9999; }
 	.physics .color.lighter { background-color: #f9cb9c; }
 	.chemistry .color.lighter { background-color: #ffe599; }
@@ -128,7 +132,7 @@
 	.logic .color.lighter { background-color: #b4a7d6; }
 
 	/* GARDENING */
-	.gardening .color.lighter { background: #eedbc9; } /* brown */
+	.gardening .color.lighter { background-color: #eedbc9; } /* brown */
 	.cultivating .color.lighter { background-color: #ea9999; }
 	.planting .color.lighter { background-color: #f9cb9c; }
 	.watering .color.lighter { background-color: #ffe599; }
@@ -137,7 +141,7 @@
 	.processing .color.lighter { background-color: #b4a7d6; }
 
 	/* MONITORING */
-	.monitoring .color.lighter { background: #ffe599; } /* yellow */
+	.monitoring .color.lighter { background-color: #ffe599; } /* yellow */
 	.analysis .color.lighter { background-color: #ea9999; }
 	.writing .color.lighter { background-color: #f9cb9c; }
 	.audio .color.lighter { background-color: #ffe599; }
@@ -147,7 +151,7 @@
 	.presenting .color.lighter { background-color: #b4a7d6; }
 
 	/* CARE */
-	.care .color.lighter { background: #a6d9bb; } /* hospital green */
+	.care .color.lighter { background-color: #a6d9bb; } /* hospital green */
 	.clothing .color.lighter { background-color: #ea9999; }
 	.hair .color.lighter { background-color: #f9cb9c; }
 	.shoes .color.lighter { background-color: #ffe599; }
@@ -156,16 +160,16 @@
 	.other .color.lighter { background-color: #b4a7d6; }
 
 	/* WHEN */
-	.day .color.lighter { background: #b6d7a8; }
-	.week .color.lighter { background: #d9d9d9; }
-	.month .color.lighter { background: #ffe599; }
-	.year .color.lighter { background: #e6b8af; }
+	.day .color.lighter { background-color: #b6d7a8; }
+	.week .color.lighter { background-color: #d9d9d9; }
+	.month .color.lighter { background-color: #ffe599; }
+	.year .color.lighter { background-color: #e6b8af; }
 
 	/* WHY */
-	.ethics .color.lighter { background: #b6d7a8; }
-	.sustainability .color.lighter { background: #d9d9d9; }
-	.religion .color.lighter { background: #ffe599; }
-	.other .color.lighter { background: #e6b8af; }
+	.ethics .color.lighter { background-color: #b6d7a8; }
+	.sustainability .color.lighter { background-color: hsl(100, 85%, 85%); }
+	.religion .color.lighter { background-color: #ffe599; }
+	.motivation .color.lighter { background-color: hsl(210, 50%, 75%); }
 
 	/* BORDERS */
 	.who.boxes .border { border-color: #70a5ac; } /* dark blue */
