--- a/0/theme/css/style.all.css
+++ b/0/theme/css/style.all.css
@@ -1262,33 +1262,33 @@ Time: 14:48 EST
  */
 @media all {
 
-	.color-updated { background: #181007; }
+	.color-updated { background-color: #181007; }
 
-	.commons .color.lighter { background: #b6d7a8; } /* green */
+	.commons .color.lighter { background-color: #b6d7a8; } /* green */
 
-	.nature .color.lighter { background: #b6d7a8; }
-	.building .color.lighter { background: #d9d9d9; } /* light grey */
-	.information .color.lighter { background: #ffe599; } /* light yellow */
-	.project .color.lighter { background: #ffd966; } /* light orange */
-	.safety .color.lighter { background: #d9d9d9; } /* light grey */
-	.recovery .color.lighter { background: #93c47d; } /* medium green */
-	.profession .color.lighter { background: #d0e0e3; } /* light blue */
-	.news .color.lighter { background: #f1c232; } /* medium orange */
-	.process .color.lighter { background: #e6b8af; } /* light magenta */
-	.method .color.lighter { background: #e6b8af; } /* light magenta */
-	.standard .color.lighter { background: #f4cccc; } /* light violet */
-	.design .color.lighter { background: #ffd966;} /* light yellow */
-	.equipment .color.lighter { background: #fce5cd; } /* light orange */
-	.resource .color.lighter { background: #d9ead3; } /* light green */
-	.service .color.lighter { background: #a2c4c9; } /* medium blue */
-	.supply .color.lighter { background: #f9cb9c; } /* light orange */
-	.store .color.lighter { background: hsl(300, 50%, 75%); } /* medium violet */
+	.nature .color.lighter { background-color: #b6d7a8; }
+	.building .color.lighter { background-color: #d9d9d9; } /* light grey */
+	.information .color.lighter { background-color: #ffe599; } /* light yellow */
+	.project .color.lighter { background-color: #ffd966; } /* light orange */
+	.safety .color.lighter { background-color: #d9d9d9; } /* light grey */
+	.recovery .color.lighter { background-color: #93c47d; } /* medium green */
+	.profession .color.lighter { background-color: #d0e0e3; } /* light blue */
+	.news .color.lighter { background-color: #f1c232; } /* medium orange */
+	.process .color.lighter { background-color: #e6b8af; } /* light magenta */
+	.method .color.lighter { background-color: #e6b8af; } /* light magenta */
+	.standard .color.lighter { background-color: #f4cccc; } /* light violet */
+	.design .color.lighter { background-color: #ffd966;} /* light yellow */
+	.equipment .color.lighter { background-color: #fce5cd; } /* light orange */
+	.resource .color.lighter { background-color: #d9ead3; } /* light green */
+	.service .color.lighter { background-color: #a2c4c9; } /* medium blue */
+	.supply .color.lighter { background-color: #f9cb9c; } /* light orange */
+	.store .color.lighter { background-color: hsl(300, 50%, 75%); } /* medium violet */
 
-	.download .color.lighter { background: #279f43; }
+	.download .color.lighter { background-color: #279f43; }
 
 	/* headers have a stronger color, same shade */
 
-	.color.darker { background: #999; } /* darker grey */
+	.color.darker { background-color: #999; } /* darker grey */
 
 	.trade .color.darker { background-color: #ffa332; } /* orange */
 	.applied .color.darker { background-color: #45818e; } /* cyan */
@@ -1318,15 +1318,19 @@ Time: 14:48 EST
 	.equipment .color.darker { background-color: #fce5cd; }
 	.resource .color.darker { background-color: #d9ead3; }
 	.service .color.darker { background-color: #a2c4c9; }
+	.ethics .color.darker { background-color: hsl(25, 85%, 85%); }
+	.religion .color.darker { background-color: hsl(50, 85%, 85%); }
+	.sustainability .color.darker { background-color: hsl(100, 85%, 85%); }
+	.motivation .color.darker { background-color: hsl(210, 35%, 50%); }
 
 	.download .color.darker { background-color: #279f43; }
 
 	/* SUB LEVEL COLORS */
 
-	.color.lighter { background: #d9d9d9; } /* light grey */
+	.color.lighter { background-color: #d9d9d9; } /* light grey */
 
 	/* TRADE */
-	.trade .color.lighter { background: #ffd199; } /* orange */
+	.trade .color.lighter { background-color: #ffd199; } /* orange */
 	.carpentry .color.lighter { background-color: #ea9999; }
 	.electrical .color.lighter { background-color: #f9cb9c; }
 	.plumbing .color.lighter { background-color: #ffe599; }
@@ -1335,7 +1339,7 @@ Time: 14:48 EST
 	.masonry .color.lighter { background-color: #b4a7d6; }
 
 	/* CAFE */
-	.cafe .color.lighter { background: #e6b8af; } /* red berry */
+	.cafe .color.lighter { background-color: #e6b8af; } /* red berry */
 	.storage .color.lighter { background-color: #ea9999; }
 	.baking .color.lighter { background-color: #f9cb9c; }
 	.cooking .color.lighter { background-color: #ffe599; }
@@ -1344,7 +1348,7 @@ Time: 14:48 EST
 	.recycling .color.lighter { background-color: #b4a7d6; }
 
 	/* APPLIED */
-	.applied .color.lighter { background: #a2c4c9; } /* cyan */
+	.applied .color.lighter { background-color: #a2c4c9; } /* cyan */
 	.engineering .color.lighter { background-color: #ea9999; }
 	.architecture .color.lighter { background-color: #f9cb9c; }
 	.landscaping .color.lighter { background-color: #ffe599; }
@@ -1353,7 +1357,7 @@ Time: 14:48 EST
 	.robotics .color.lighter { background-color: #b4a7d6; }
 
 	/* ART */
-	.art .color.lighter { background: #d5a6bd; } /* magenta */
+	.art .color.lighter { background-color: #d5a6bd; } /* magenta */
 	.piano .color.lighter { background-color: #ea9999; }
 	.violin .color.lighter { background-color: #f9cb9c; }
 	.painting .color.lighter { background-color: #ffe599; }
@@ -1362,7 +1366,7 @@ Time: 14:48 EST
 	.saxophone .color.lighter { background-color: #b4a7d6; }
 
 	/* ACADEMIC */
-	.academic .color.lighter { background: #d9d2e9; } /* purple */
+	.academic .color.lighter { background-color: #d9d2e9; } /* purple */
 	.mathematics .color.lighter { background-color: #ea9999; }
 	.physics .color.lighter { background-color: #f9cb9c; }
 	.chemistry .color.lighter { background-color: #ffe599; }
@@ -1371,7 +1375,7 @@ Time: 14:48 EST
 	.logic .color.lighter { background-color: #b4a7d6; }
 
 	/* GARDENING */
-	.gardening .color.lighter { background: #eedbc9; } /* brown */
+	.gardening .color.lighter { background-color: #eedbc9; } /* brown */
 	.cultivating .color.lighter { background-color: #ea9999; }
 	.planting .color.lighter { background-color: #f9cb9c; }
 	.watering .color.lighter { background-color: #ffe599; }
@@ -1380,7 +1384,7 @@ Time: 14:48 EST
 	.processing .color.lighter { background-color: #b4a7d6; }
 
 	/* MONITORING */
-	.monitoring .color.lighter { background: #ffe599; } /* yellow */
+	.monitoring .color.lighter { background-color: #ffe599; } /* yellow */
 	.analysis .color.lighter { background-color: #ea9999; }
 	.writing .color.lighter { background-color: #f9cb9c; }
 	.audio .color.lighter { background-color: #ffe599; }
@@ -1390,7 +1394,7 @@ Time: 14:48 EST
 	.presenting .color.lighter { background-color: #b4a7d6; }
 
 	/* CARE */
-	.care .color.lighter { background: #a6d9bb; } /* hospital green */
+	.care .color.lighter { background-color: #a6d9bb; } /* hospital green */
 	.clothing .color.lighter { background-color: #ea9999; }
 	.hair .color.lighter { background-color: #f9cb9c; }
 	.shoes .color.lighter { background-color: #ffe599; }
@@ -1399,16 +1403,16 @@ Time: 14:48 EST
 	.other .color.lighter { background-color: #b4a7d6; }
 
 	/* WHEN */
-	.day .color.lighter { background: #b6d7a8; }
-	.week .color.lighter { background: #d9d9d9; }
-	.month .color.lighter { background: #ffe599; }
-	.year .color.lighter { background: #e6b8af; }
+	.day .color.lighter { background-color: #b6d7a8; }
+	.week .color.lighter { background-color: #d9d9d9; }
+	.month .color.lighter { background-color: #ffe599; }
+	.year .color.lighter { background-color: #e6b8af; }
 
 	/* WHY */
-	.ethics .color.lighter { background: #b6d7a8; }
-	.sustainability .color.lighter { background: #d9d9d9; }
-	.religion .color.lighter { background: #ffe599; }
-	.other .color.lighter { background: #e6b8af; }
+	.ethics .color.lighter { background-color: #b6d7a8; }
+	.sustainability .color.lighter { background-color: hsl(100, 85%, 85%); }
+	.religion .color.lighter { background-color: #ffe599; }
+	.motivation .color.lighter { background-color: hsl(210, 50%, 75%); }
 
 	/* BORDERS */
 	.who.boxes .border { border-color: #70a5ac; } /* dark blue */
@@ -1458,6 +1462,14 @@ Time: 14:48 EST
 
 @media all {
 
+	/**
+ 	 * Define the text values to go with the icons.
+ 	 */
+	 span.text {
+		 display: inline-block;
+		 height: 35px;
+		 line-height: 35px;
+	 }
 	/**
 	 * I. Who (First Block Left / First Block Top)
 	 *
@@ -2323,7 +2335,7 @@ Time: 14:48 EST
 		background-color: hsl(24, 50%, 75%);
 	}
 
-	.site-header > a > .inner {
+	.site-header > .inner {
 		margin: 2px;
 		border-top-left-radius: 3px;
 		border-top-right-radius: 3px;
@@ -2359,13 +2371,6 @@ Time: 14:48 EST
 
 	.site-header-sub .none {
 		padding-left: 2px;
-	}
-
-	.site-header-sub .color.lighter,
-	.site-header-sub .color.darker
-	 {
-			margin-right: 2px;
-			margin-left: 2px;
 	}
 
 	.spacer-header {
@@ -2578,16 +2583,6 @@ Time: 14:48 EST
 		height: 25px;
 	}
 
-	.tier-1 .level-1.icon {
-		position: absolute;
-		z-index: 10;
-		right: 40px;
-		top: 19px;
-		height: 35px;
-		width: 35px;
-		display: inline-block;
-	}
-
 	.tier-1 .site-header > a {
 		height: 20px;
 	}
@@ -2604,19 +2599,19 @@ Time: 14:48 EST
 
 	.tier-1 .site-header-sub {
 		margin-top: 0;
-		height: 77px;
+		height: 75px;
 		text-align: left;
 		vertical-align: middle;
-		line-height: 73px;
+		line-height: 75px;
 		position: relative;
 	}
 
 	/** This goes on the left hand side, but fills the whole width (behind) */
 	.tier-1 .site-header-sub .left {
 		display: inline-block;
-		height: 73px;
+		height: 75px;
 		padding: 0 1.0em;
-		line-height: 73px;
+		line-height: 75px;
 		text-align: center;
 		font-weight: bold;
 		font-size: 120%;
@@ -2635,12 +2630,21 @@ Time: 14:48 EST
 		display: inline-block;
 	}
 
-	.site-header-sub .right .header-height {
-		height: 74px;
+	.tier-1.right.icon {
+		position: absolute;
+		z-index: 10;
+		right: 40px;
+		top: 19px;
+		height: 35px;
+		width: 35px;
+		display: inline-block;
 	}
 
 	.header-height {
-		height: 73px;
+		height: 75px;
+	}
+
+	.header-height a {
 		padding-left: 15px;
 	}
 
