--- a/0/theme/css/style.css
+++ b/0/theme/css/style.css
@@ -356,8 +356,8 @@ Time: 14:48 EST
 *
 * File: 02-main.css
 * Created: 2016.12.15
-* Updated: 2018-11-07
-* Time: 18:18 EST
+* Updated: 2018-11-09
+* Time: 18:49 EST
 */
 
 /**
@@ -676,8 +676,27 @@ Time: 14:48 EST
 
 	/***** BODY START *****/
 
-	main { clear: both; }
+	main {
+		display: block;
+		clear: both;
+	}
 
+/** Part width only for displays large enough. */
+@media (min-width: 800px) {
+
+		html.aside main {
+			float: left;
+			width: 72%;
+		}
+
+		/** Only for an `aside` outside of the article element. */
+		html.aside > body > aside {
+			float: right;
+			width: 23%;
+			background-color: hsl(90, 25%, 85%);
+		}
+
+	}
 	h1, h2, h3, h4 {
 		line-height: 1.3;
 	}
@@ -721,10 +740,10 @@ Time: 14:48 EST
 	}
 
 	aside {
-		margin-top: .5em;
-		padding: .5em;
-		text-align: center;
-		font-style: italic;
+		padding: 1em;
+		font-size: 85%;
+		border-left: 1px solid #c8c8c8;
+		border-bottom: 1px solid #c8c8c8;
 	}
 
 	section {
@@ -1016,10 +1035,10 @@ Time: 14:48 EST
 		box-shadow: none;
 	}
 
-	html.theme-dark > .wrap > .inner,
-	html.media > .wrap > .inner,
-	html.video > .wrap > .inner,
-	html.audio > .wrap > .inner {
+	html.theme-dark > body > main,
+	html.media  > body > main,
+	html.video  > body > main,
+	html.audio  > body > main {
 		background-color: #121212;
 		opacity: 1;
 		border-radius: 6px;
