--- a/0/theme/css/02-main.css
+++ b/0/theme/css/02-main.css
@@ -108,7 +108,13 @@
 
 	.full-screen section .wrap { background-color: #fff; }
 
-	.border { border: 1px solid #debc65; }
+	.border {
+    border: 1px solid #debc65;
+  }
+
+  .border-top {
+    border: 1px solid #c8c8c8; 
+  }
 
 	.box-shadow { box-shadow: 0 2px 2px rgba(100, 100, 100, 0.5); }
 
